clean some stuff

--- a/_config.yml
+++ b/_config.yml
@@ -51,8 +51,7 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-permalink: /:types/:categories/:title/
-permalink_custom_vars: ['types']
+permalink: /posts/:slug/
 collections:
   authors:
     output: true
