--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,11 @@
 # in the templates via {{ site.myvariable }}.
 
 title: آسمانه
-email: info@asmaneh.com
+email: asmanehchannel@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  «آسمانه» شبکه‌ای است برای انتقال اطلاعات و دانش، و گفت‌وگو و نقد در زمینۀ تاریخ و تئوری معماری و هنر، پیوندهای معماری و هنر با انسانیات و فرهنگ، و حوزه‌های میان‌رشته‌ای به‌ویژه در پیوند با رشته‌ها و حوزه‌های تاریخ هنر، نقد هنر، نظریۀ ادبی، انسان‌شناسی فرهنگی، مطالعات فرهنگی، تاریخ فرهنگی، تاریخ اجتماعی، جامعه‌شناسی تاریخی.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://asmaneh.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 plugins:
